--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ header .fa-bars{
     display: flex;
     align-items: center;
     min-height: 100vh;
-    background:url(static/images/home-bg.jpg) no-repeat;
+    background:url(/static/images/home-bg.jpg) no-repeat;
     background-color: #fff8dc;
     background-size: cover;
     background-position: center;
