--- a/aboutus.html
+++ b/aboutus.html
@@ -227,7 +227,7 @@ img:hover{
 <body >
     <h1 align="center">Gift cards</h1>
         <div class="facilities-col">
-        <img src="static/images/home-bg.jpg" height="600" width="1000" >
+        <img src="/static/images/home-bg.jpg" height="600" width="1000" >
     <div class="layer">
         <h3>buy or sell your gift cards</h3>
     
@@ -266,7 +266,7 @@ img:hover{
        <section class="info">
         
 <div class="container">
-    <img src="static/images/home-bg.jpg"  width="1000" height="300" class="image">
+    <img src="/static/images/home-bg.jpg"  width="1000" height="300" class="image">
     <a href="contact.html">
     <div class="center">Contact Us For More Information</div>
 </a>
