--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@ var swiper = new Swiper(".review-slider", {
 <section class="icons-container">
 
     <div class="icons">
-        <img src="static/images/icon-1.png" alt="">
+        <img src="/static/images/icon-1.png" alt="">
         <div class="info">
             <h3>free delivery</h3>
             <span>on all orders</span>
@@ -748,7 +748,7 @@ var swiper = new Swiper(".review-slider", {
     </div>
 
     <div class="icons">
-        <img src="static/images/icon-2.png" alt="">
+        <img src="/static/images/icon-2.png" alt="">
         <div class="info">
             <h3>10 days returns</h3>
             <span>moneyback guarantee</span>
@@ -756,7 +756,7 @@ var swiper = new Swiper(".review-slider", {
     </div>
 
     <div class="icons">
-        <img src="static/images/icon-3.png" alt="">
+        <img src="/static/images/icon-3.png" alt="">
         <div class="info">
             <h3>offer & gifts</h3>
             <span>on all orders</span>
@@ -764,7 +764,7 @@ var swiper = new Swiper(".review-slider", {
     </div>
 
     <div class="icons">
-        <img src="static/images/icon-4.png" alt="">
+        <img src="/static/images/icon-4.png" alt="">
         <div class="info">
             <h3>secure paymens</h3>
             <span>protected by paypal</span>
@@ -786,7 +786,7 @@ var swiper = new Swiper(".review-slider", {
         <div class="box">
             <span class="discount">-10%</span>
             <div class="image">
-                <img src="static/images/img-1.jpg" alt="">
+                <img src="/static/images/img-1.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -804,7 +804,7 @@ var swiper = new Swiper(".review-slider", {
         <div class="box">
             <span class="discount">-15%</span>
             <div class="image">
-                <img src="static/images/img-2.jpg" alt="">
+                <img src="/static/images/img-2.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -821,7 +821,7 @@ var swiper = new Swiper(".review-slider", {
         <div class="box">
             <span class="discount">-5%</span>
             <div class="image">
-                <img src="static/images/img-3.jpg" alt="">
+                <img src="/static/images/img-3.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -839,7 +839,7 @@ var swiper = new Swiper(".review-slider", {
         <div class="box">
             <span class="discount">-20%</span>
             <div class="image">
-                <img src="static/images/img-4.jpg" alt="">
+                <img src="/static/images/img-4.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -856,7 +856,7 @@ var swiper = new Swiper(".review-slider", {
         <div class="box">
             <span class="discount">-17%</span>
             <div class="image">
-                <img src="static/images/img-5.jpg" alt="">
+                <img src="/static/images/img-5.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -873,7 +873,7 @@ var swiper = new Swiper(".review-slider", {
         <div class="box">
             <span class="discount">-3%</span>
             <div class="image">
-                <img src="static/images/img-6.jpg" alt="">
+                <img src="/static/images/img-6.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -890,7 +890,7 @@ var swiper = new Swiper(".review-slider", {
         <div class="box">
             <span class="discount">-18%</span>
             <div class="image">
-                <img src="static/images/img-7.jpg" alt="">
+                <img src="/static/images/img-7.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -907,7 +907,7 @@ var swiper = new Swiper(".review-slider", {
         <div class="box">
             <span class="discount">-10%</span>
             <div class="image">
-                <img src="static/images/img-8.jpg" alt="">
+                <img src="/static/images/img-8.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -924,7 +924,7 @@ var swiper = new Swiper(".review-slider", {
         <div class="box">
             <span class="discount">-5%</span>
             <div class="image">
-                <img src="static/images/img-9.jpg" alt="">
+                <img src="/static/images/img-9.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -940,7 +940,7 @@ var swiper = new Swiper(".review-slider", {
         <div class="box">
             <span class="discount">-10%</span>
             <div class="image">
-                <img src="static/images/img-10.jpg" alt="">
+                <img src="/static/images/img-10.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -956,7 +956,7 @@ var swiper = new Swiper(".review-slider", {
         <div class="box">
             <span class="discount">-10%</span>
             <div class="image">
-                <img src="static/images/img-11.jpg" alt="">
+                <img src="/static/images/img-11.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -972,7 +972,7 @@ var swiper = new Swiper(".review-slider", {
         <div class="box">
             <span class="discount">-6%</span>
             <div class="image">
-                <img src="static/images/img-12.jpg" alt="">
+                <img src="/static/images/img-12.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -988,7 +988,7 @@ var swiper = new Swiper(".review-slider", {
         <div class="box">
             <span class="discount">-15%</span>
             <div class="image">
-                <img src="static/images/img-13.jpg" alt="">
+                <img src="/static/images/img-13.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -1004,7 +1004,7 @@ var swiper = new Swiper(".review-slider", {
         <div class="box">
             <span class="discount">-10%</span>
             <div class="image">
-                <img src="static/images/img-14.jpg" alt="">
+                <img src="/static/images/img-14.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -1020,7 +1020,7 @@ var swiper = new Swiper(".review-slider", {
         <div class="box">
             <span class="discount">-10%</span>
             <div class="image">
-                <img src="static/images/img-15.jpg" alt="">
+                <img src="/static/images/img-15.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -1059,7 +1059,7 @@ var swiper = new Swiper(".review-slider", {
         </form>
 
         <div class="image">
-            <img src="static/images/contact-img.svg" alt="">
+            <img src="/static/images/contact-img.svg" alt="">
         </div>
 
     </div>
@@ -1103,7 +1103,7 @@ var swiper = new Swiper(".review-slider", {
             <a href="#">+123-456-7890</a>
             <a href="#">example@gmail.com</a>
             <a href="#">mumbai, india - 400104</a>
-            <img src="images/payment.png" alt="">
+            <img src="/static/images/payment.png" alt="">
         </div>
 
     </div>
