--- a/aboutus.html
+++ b/aboutus.html
@@ -227,7 +227,7 @@ img:hover{
 <body >
     <h1 align="center">Gift cards</h1>
         <div class="facilities-col">
-        <img src="/static/images/home-bg.jpg" height="600" width="1000" >
+        <img src="static/images/home-bg.jpg" height="600" width="1000" >
     <div class="layer">
         <h3>buy or sell your gift cards</h3>
     
