--- a/aboutus.html
+++ b/aboutus.html
@@ -266,7 +266,7 @@ img:hover{
        <section class="info">
         
 <div class="container">
-    <img src="/static/images/home-bg.jpg"  width="1000" height="300" class="image">
+    <img src="static/images/home-bg.jpg"  width="1000" height="300" class="image">
     <a href="contact.html">
     <div class="center">Contact Us For More Information</div>
 </a>
